fix the godforsaken scrolling on mobile

--- a/client/layout/layout.less
+++ b/client/layout/layout.less
@@ -17,13 +17,6 @@ body{
 #editorialish{
   height:100%;
   overflow:auto;
-  @media (min-width:@bp-1){
-    top:0;
-    bottom:0;
-    left:0;
-    right:0;
-    position: fixed;
-  }
 }
 
 
@@ -43,6 +36,4 @@ body{
   right:0;
   bottom:0;
   background-color: #F8F8F8;
-  overflow-y:auto;
-  .ui-scrollable();
 }
