--- a/client/utilities/mixins.less
+++ b/client/utilities/mixins.less
@@ -47,10 +47,3 @@
     clear: both;
   }
 }
-
-.ui-scrollable(){
-  -webkit-overflow-scrolling:touch;
-  -moz-overflow-scrolling:touch;
-  overflow-scrolling:touch;
-}
-
